fixing notebook to load local version of data

--- a/DJI-HSI-causal-inference.ipynb
+++ b/DJI-HSI-causal-inference.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 170,
    "metadata": {
     "janus": {
      "all_versions_showing": false,
@@ -146,8 +146,8 @@
    "outputs": [],
    "source": [
     "# load the data\n",
-    "dji = pd.read_csv('../sample-path-causal-measure/data/DJI.csv')\n",
-    "hsi = pd.read_csv('../sample-path-causal-measure/data/HSI.csv')\n",
+    "dji = pd.read_csv('./DJI.csv')\n",
+    "hsi = pd.read_csv('./HSI.csv')\n",
     "# convert adjusted closing price to numeric values\n",
     "dji['Adj Close'] = pd.to_numeric(dji['Adj Close'], errors='coerce')\n",
     "hsi['Adj Close'] = pd.to_numeric(hsi['Adj Close'], errors='coerce')\n",
